# H1jet

./: .gitattributes  ChangeLog  Makefile  Makefile.am  Makefile.in  README.md  configure  configure.ac
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
src/: Makefile.am  Makefile.in  banner.f90  common_vars.f90  cross_sections.f90  d107d1.f  dgquad.f  dgset.f  ew_parameters.f90  frcgauss.f90  gauss_integrator.f90  h1jet.f90  hboson.f90  hboson_old.f90  input.f90  io_utils.f90  mass_helper.f90  pdfs_tools.f90  scalar_integrals.f90  user_interface.f90  vboson.f90
tex/: h1jet.bib  h1jet.tex  manual.tex
tex/figures/: ALPratio.eps  ALPresult.eps  CPoddratio.eps  CPoddresum.eps  H1jetresult.eps  MoneyPlot.eps  SUSYratio.eps  SUSYresum.eps  alpratio.eps  alpresult.eps  alpresum.eps  h1jetresult.eps  sushitestlog.eps
